@@ -1,3 +1,12 @@
+2006-12-08  George Staikos  <staikos@kde.org>
+
+        Reviewed by Maciej.
+
+        Build Qt webkit on non-linux, and prefer it if $QTDIR is set
+
+        * Scripts/build-webkit:
+        * Scripts/webkitdirs.pm:
+
 2006-12-06  Steve Falkenburg  <sfalken@apple.com>
 
         Support C strings for localization
